<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="217dp"
        android:layout_height="168dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo"
        android:contentDescription="TODO" />

    <androidx.cardview.widget.CardView
        android:layout_width="350dp"
        android:layout_height="284dp"
        app:cardBackgroundColor="#FFFFFF"

        app:cardCornerRadius="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.606">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:background="@drawable/gradient_cardview"
            android:layout_height="match_parent">


            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="335dp"
                android:layout_height="123dp"
                android:layout_marginTop="16dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <EditText
                    android:id="@+id/et_usuario"
                    android:layout_width="match_parent"
                    android:layout_height="61dp"
                    android:ems="10"
                    android:hint="@string/ingrese_usuario"
                    android:inputType="textPersonName"
                    android:minHeight="48dp"
                    android:textColorHint="@color/black"
                    android:autofillHints="" />

                <EditText
                    android:id="@+id/et_contrasena"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/ingrese_contrase_a"
                    android:inputType="textPassword"
                    android:minHeight="48dp"
                    android:textColorHint="@color/black"
                    android:autofillHints="" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="221dp"
                android:layout_height="97dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout">

                <Button
                    android:id="@+id/btn"
                    android:layout_width="220dp"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#ba0d26"
                    android:text="@string/iniciar_sesi_n"
                    app:cornerRadius="25dp" />

                <Button
                    android:id="@+id/button2"
                    android:layout_width="220dp"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#ba0d26"
                    android:text="@string/salir_de_cavalier_s"
                    app:cornerRadius="25dp" />
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="409dp"
        android:layout_height="64dp"
        android:layout_marginBottom="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.571"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/gradient_cardview">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="401dp"
                android:layout_height="40dp"
                android:text="@string/copyright_cavalier_s_barbershop_todos_los_derechos_reservados_2021"
                android:textAlignment="center"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_mensaje"
        android:layout_width="339dp"
        android:layout_height="41dp"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.416"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.289" />

    <ProgressBar
        android:id="@+id/pb"
        style="?android:attr/progressBarStyle"
        android:layout_width="76dp"
        android:layout_height="61dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.861" />
</androidx.constraintlayout.widget.ConstraintLayout>