<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".home_act">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="374dp"
        android:layout_height="325dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.432"
        app:layout_constraintStart_toStartOf="parent"
        app:cardCornerRadius="25dp"
        app:layout_constraintTop_toTopOf="parent" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:background="@drawable/gradient_cardview"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView"
                android:layout_width="333dp"
                android:layout_height="24dp"
                android:layout_marginTop="4dp"
                android:text="Bienvenido a Cavalier's BarberShop"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.39"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="362dp"
                android:layout_height="75dp"
                android:layout_marginTop="44dp"
                android:text="Bienvenido!. En nuestra barbería encontraras los mejores implementos para ofrecerte un servicio de calidad. También contamos con todas las medidas preventivas dada la contigencia."
                android:textSize="14sp"
                android:textStyle="italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <VideoView
                android:id="@+id/videoView"
                android:layout_width="342dp"
                android:layout_height="180dp"
                android:layout_marginBottom="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.533"
                app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="366dp"
        android:layout_height="45dp"
        app:cardCornerRadius="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.59" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="275dp"
                android:layout_height="39dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.505"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"></LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="371dp"
        android:layout_height="194dp"
        android:layout_marginBottom="68dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:cardCornerRadius="25dp"
        app:layout_constraintHorizontal_bias="0.465"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:background="@drawable/gradient_cardview"
            android:layout_height="match_parent">

            <TableLayout
                android:layout_width="354dp"
                android:layout_height="149dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.567">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="84dp">

                    <Button
                        android:id="@+id/button3"
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="158dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:backgroundTint="#ba0d26"
                        app:cornerRadius="25dp"
                        android:text="@string/reserva_tu_hora"
                        android:textColor="@color/white" />

                    <Button
                        android:id="@+id/button4"
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:backgroundTint="#ba0d26"
                        android:onClick="precios"
                        android:text="@string/lista_de_precios"
                        android:textColor="@color/white"
                        app:cornerRadius="25dp" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="94dp">

                    <Button
                        android:id="@+id/button6"
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_margin="10dp"
                        android:backgroundTint="#ba0d26"
                        android:onClick="info"
                        android:text="@string/contacto"
                        android:textColor="@color/white"
                        app:cornerRadius="25dp" />

                    <Button
                        android:id="@+id/button5"
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:backgroundTint="#ba0d26"
                        app:cornerRadius="25dp"
                        android:text="@string/galer_a"
                        android:textColor="@color/white" />
                </TableRow>

            </TableLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>